try to fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
 language: node_js
 node_js:
  - lts/*
+
+before_install:
+  - sudo apt-get install libterm-readkey-perl liblwp-useragent-determined-perl libjson-perl;
